--- a/package.json
+++ b/package.json
@@ -63,7 +63,5 @@
     "node": ">=0.8.0",
     "npm": ">=1.1.0"
   },
-  "dependencies": {
-    "github-label-sync": "^2.0.0"
-  }
+  "dependencies": {}
 }
